# runev2

./: .gitignore  CLAUDE.md  Cargo.toml  run_cef.sh  rune.toml  rust_out
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cef-app/: .gitignore  LICENSE.md  build-rust.sh  cef_demo.h
cef-app/cef-app/: AppDelegate.m  Info.plist  Renderer.mm  ViewController.mm  cef-app.entitlements  main.mm
cef-app/cef-app Helper/: Info.plist  process_helper_mac.cc
cef-app/cef-app.xcodeproj/: project.pbxproj
crates/cef-demo/: Cargo.toml
crates/cef-demo/src/: ffi.rs  lib.rs  main.rs  shader.wgsl
crates/demo-app/: Cargo.toml
crates/demo-app/src/: main.rs  ui_canvas.rs
crates/demo-app/src/scenes/: cef.rs  centered_rect.rs  circle.rs  cosmic_direct.rs  default.rs  harfrust_text.rs  hyperlinks.rs  images.rs  linear.rs  mod.rs  overlay.rs  path_demo.rs  radial.rs  shadow.rs  svg_geom.rs  text_demo.rs  ui.rs  unified_test.rs  zones.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: allocator.rs  color.rs  display_list.rs  dpi.rs  hit_test.rs  image_cache.rs  lib.rs  painter.rs  pass_manager.rs  pipeline.rs  scene.rs  svg.rs  text.rs  text_layout.rs  upload.rs
crates/engine-shaders/: Cargo.toml
crates/rune-cef/: Cargo.toml  build.rs
crates/rune-cef/shim/: CMakeLists.txt  rune_cef_shim.cc  rune_cef_shim.h
crates/rune-cef/src/: cdp_backend.rs  cef_backend.rs  cef_sys.rs  error.rs  frame.rs  lib.rs  shim_backend.rs  shim_ffi.rs  texture.rs
crates/rune-config/: Cargo.toml  README.md
crates/rune-ffi/: Cargo.toml
crates/rune-ffi/src/: ffi.rs  lib.rs
crates/rune-io/: Cargo.toml
crates/rune-ir/: Cargo.toml
crates/rune-ir/home_tab/: RUNE.MANIFEST.json  RUNE.TOC.json
crates/rune-ir/home_tab/views/data/: home.json
crates/rune-ir/home_tab/views/layout/: home.vizr
crates/rune-ir/schema/: data_document.schema.json  view_document.schema.json
crates/rune-ir/src/: lib.rs  schema.rs
crates/rune-ir/src/css/: bridge.rs  cascade.rs  diagnostics.rs  mod.rs  parser.rs  servo_dom.rs  servo_selectors.rs  taffy_mapper.rs  types.rs  ua_defaults.rs
crates/rune-ir/src/css/properties/: canonical.rs
crates/rune-ir/src/data/: document.rs  mod.rs
crates/rune-ir/src/html/: mod.rs
crates/rune-ir/src/logic/: diff.rs  mod.rs  mutation.rs
crates/rune-ir/src/package/: mod.rs
crates/rune-ir/src/view/: animation.rs  mod.rs
crates/rune-ir/tests/: html_translator.rs  package_loading.rs
crates/rune-js/: Cargo.toml
crates/rune-js/src/: lib.rs
crates/rune-provider/: Cargo.toml
crates/rune-scene/: Cargo.toml  README.md  ZONE_MIGRATION.md
crates/rune-scene/examples/: inputbox_demo.rs
crates/rune-scene/src/: event_handler.rs  event_router.rs  ir_adapter.rs  ir_renderer.rs  lib.rs  lib_old.rs  main.rs  manual_render.rs  navigation.rs  persistence.rs  sample_ui.rs  scene.rs  text.rs  viewport_ir.rs  viewport_ir_old.rs
crates/rune-scene/src/animation/: easing.rs  events.rs  interpolate.rs  keyframes.rs  manager.rs  mod.rs  resolver.rs  schema.rs  state_tracker.rs  transform.rs  transition.rs  types.rs
crates/rune-scene/src/elements/: alert.rs  button.rs  caret.rs  caret_renderer.rs  checkbox.rs  confirm_dialog.rs  date_picker.rs  file_input.rs  image.rs  input_box.rs  input_box_old.rs  label.rs  link.rs  mod.rs  modal.rs  multiline_text.rs  radio.rs  select.rs  selection_renderer.rs  table.rs  text.rs  text_area.rs  webview.rs
crates/rune-scene/src/ir_renderer/: core.rs  elements.rs  hit_region.rs  painter_backend.rs  runner.rs  state.rs  style.rs  tests.rs  text_measure.rs
crates/rune-scene/src/layout/: context.rs  mod.rs
crates/rune-scene/src/zones/: chat.rs  common.rs  devtools.rs  dock.rs  mod.rs  render.rs  sidebar.rs  toolbar.rs  viewport.rs
crates/rune-surface/: Cargo.toml
crates/rune-text/: Cargo.toml
crates/rune-text/examples/: cursor_demo.rs  cursor_movement_demo.rs  hit_test_demo.rs  selection_demo.rs  text_editing_demo.rs
crates/rune-text/src/: lib.rs
crates/rune-text/src/bidi/: levels.rs  mirror.rs  mod.rs  reorder.rs
crates/rune-text/src/font/: face.rs  loader.rs  metrics.rs  mod.rs
crates/rune-text/src/layout/: cursor.rs  cursor_movement.rs  hit_test.rs  line_box.rs  line_breaker.rs  mod.rs  prefix_sums.rs  selection.rs  text_layout.rs  undo.rs
crates/rune-text/src/shaping/: mod.rs  shaped_run.rs  shaper.rs
crates/rune-text/src/unicode/: graphemes.rs  mod.rs  properties.rs
crates/rune-wasm/: Cargo.toml
crates/rune-window/: Cargo.toml
docs/: 2-pass-resize-fix.md  ANIMATION_MODULE_IMPLEMENTATION.md  FILE_INPUT_IMPLEMENTATION.md  INTEGRATION-SUMMARY.md  IR_Renderer_Guardrails.md  Issues_to_fix.md  MyTodo.md  NSview.md  RendererCompleteChecklist.md  TABLE_IMPLEMENTATION.md  alpha-blending-bug.md  cef-rust-integration-plan.md  cef-test-setup.md  clipboard-implementation.md  codex_suggestions.md  date-picker-features.md  dpi.rs  element-based-rendering.md  home-tab-integration.md  how-to-run.md  incremental-testing-plan.md  inputbox-implementation.md  inputbox-textlayout-checklist.md  integration-quick-start.md  ir-adapter-integration.md  ir-element-mapping.md  ir-renderer-progress.md  ir-wasm-io-integration-assessment.md  mouse-selection-implementation.md  pass-manager-unified-refactoring-checklist.md  phase1-2-implementation-summary.md  phase3-implementation-summary.md  phase5-implementation.md  plan.md  rendering.md  resize-flash-issue.md  rune-scene.md  rune-text-architecture.md  rune_surface.md  scope.md  (+22 more)
docs/rune-text/: Cargo.toml  cursor-management.md  cursor-movement.md  hit-testing.md  phase-6.2-complete.md  phase-6.3-complete.md  phase-6.4-complete.md  selection-management.md
examples/: file_input_usage.md  table_screenshot_example.txt  table_usage.md
examples/sample_first_node/: RUNE.MANIFEST.json  RUNE.MANIFEST.json.backup  RUNE.TOC.json
examples/sample_form/: RUNE.MANIFEST.json  (+1 more)
images/: AppIcon.icns
rune-app/: .gitignore  README.md  build-rust.sh  copy-resources.sh  rune_ffi.h
scripts/: build_rune_cef_shim.sh  bundle_cef_demo.sh  bundle_macos_cef.sh
src/: main.rs
(+51 files in other folders)
