[package]
name = "rune"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
rune-scene = { path = "crates/rune-scene" }

[workspace]
members = [
    "crates/engine-core",
    "crates/engine-shaders",
    "crates/demo-app",
    "crates/rune-surface",
    "crates/rune-window",
    "crates/rune-scene",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rune Draw Contributors"]
homepage = "https://example.com"
repository = "https://example.com/repo"

[workspace.dependencies]
wgpu = "0.19"
palette = "0.7"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1"
thiserror = "1"
winit = "0.29"
pollster = "0.3"
fontdue = "0.7"
