[package]
name = "rune"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
rune-scene = { path = "crates/rune-scene" }

[workspace]
members = [
    "crates/engine-core",
    "crates/engine-shaders",
    "crates/demo-app",
    "crates/rune-surface",
    "crates/rune-window",
    "crates/rune-scene",
    "crates/rune-text",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rune Draw Contributors"]
homepage = "https://example.com"
repository = "https://example.com/repo"

[workspace.dependencies]
wgpu = "0.19"
palette = "0.7"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1"
thiserror = "1"
winit = "0.29"
pollster = "0.3"
fontdue = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
unicode-segmentation = "1.11"
unicode-linebreak = "0.1"
unicode-bidi = "0.3"
swash = "0.1"
fontdb = "0.23"
harfrust = "0.3.2"
