[package]
name = "rune-cef"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Headless CEF (Chromium Embedded Framework) renderer for wgpu surfaces"
links = "cef"

[lib]
path = "src/lib.rs"

[dependencies]
wgpu = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# For frame buffer handling
image = { workspace = true }
bytemuck = { workspace = true }

# CEF is dynamically linked - these are the raw FFI bindings
# The CEF binary distribution must be in CEF_PATH or system library path
libloading = "0.8"

# Alternative: chromiumoxide for CDP-based headless Chrome
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"], optional = true }
futures = { version = "0.3", optional = true }
base64 = { version = "0.22", optional = true }

[build-dependencies]
# Build script for locating CEF distribution
bindgen = { version = "0.71", optional = true }

[features]
default = ["cef-dynamic"]
# Dynamically linked CEF (runtime loading via libloading)
cef-dynamic = []
# Generate bindings at build time (requires CEF headers)
cef-bindgen = ["dep:bindgen"]
# Use chromiumoxide CDP for headless Chrome (easier setup, async)
cdp = ["dep:chromiumoxide", "dep:tokio", "dep:futures", "dep:base64"]
