[package]
name = "rune-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI exports for embedding rune-scene in native macOS applications"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []
webview-cef = ["rune-scene/webview-cef"]

[dependencies]
rune-scene = { path = "../rune-scene" }
rune-surface = { path = "../rune-surface" }
rune-ir = { path = "../rune-ir" }
engine-core = { path = "../engine-core" }
wgpu = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
parking_lot = "0.12"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
serde_json = "1"
