[package]
name = "rune-ir"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
nanoid = "0.4.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
jsonschema = { version = "0.17.1", default-features = false, features = ["draft202012"] }
hex = "0.4.3"
scraper = "0.18.1"
sha2 = "0.10.8"
url = "2.5.2"
ego-tree = "0.6.2"
tracing = "0.1.41"
csscolorparser = "0.6"
cssparser = { version = "0.31.2", optional = true }
string_cache = { version = "0.8" }

[features]
default = ["cssv2", "servo_selectors"]
servo_selectors_wide = ["servo_selectors"]
# Experimental CSS v2 resolver, guarded by a crate feature.
# Initially off by default. Examples or local builds can enable with
# `--features rune-ir/cssv2` from the workspace.
cssv2 = ["dep:lightningcss"]
servo_selectors = ["dep:selectors", "dep:cssparser"]

[dependencies.lightningcss]
version = "1.0.0-alpha.57"
optional = true
default-features = false

[dependencies.selectors]
version = "0.25"
optional = true

[dev-dependencies]
tempfile = "3.10.1"
