[package]
name = "rune-scene"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rune-scene"
path = "src/main.rs"

[features]
default = []
ir-rendering = []

[dependencies]
anyhow = { workspace = true }
engine-core = { path = "../engine-core" }
rune-surface = { path = "../rune-surface" }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
rune-text = { path = "../rune-text" }
taffy = { workspace = true }
rune-ir = { path = "../rune-ir" }
rune-wasm = { path = "../rune-wasm" }
rune-io = { path = "../rune-io" }
serde_json = "1.0"
rfd = { workspace = true }
rune-config = { path = "../rune-config" }
tracing = "0.1"
serde = { workspace = true }
dirs = "5"
