[package]
name = "rune-scene"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rune-scene"
path = "src/main.rs"

[features]
default = []
ir-rendering = []
# Enable CEF-based WebView element rendering
webview-cef = ["dep:rune-cef"]

[dependencies]
anyhow = { workspace = true }
engine-core = { path = "../engine-core" }
rune-surface = { path = "../rune-surface" }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
rune-text = { path = "../rune-text" }
taffy = { workspace = true }
rune-ir = { path = "../rune-ir" }
rune-wasm = { path = "../rune-wasm" }
rune-io = { path = "../rune-io" }
serde_json = "1.0"
rfd = { workspace = true }
rune-config = { path = "../rune-config" }
tracing = "0.1"
serde = { workspace = true }
dirs = "5"
urlencoding = "2"
log = "0.4"
# Optional CEF integration for WebView elements
rune-cef = { path = "../rune-cef", optional = true }
static_assertions = "1.1"

[package.metadata.packager]
before-packaging-command = "cargo build --release -p rune-scene"
product-name = "Rune Scene"
identifier = "com.rune.scene"
version = "0.1.0"
category = "DeveloperTool"
description = "AI-native IR renderer"
long-description = "Rune Scene is an AI-native runtime for rendering IR-based user interfaces"
authors = ["Rune Team"]
homepage = "https://github.com/rune-rs/rune"
resources = ["../../images"]

[package.metadata.packager.macos]
minimum-system-version = "12.0"
frameworks = []
signing-identity = "-"
