[package]
name = "rune-text"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
rustybuzz = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-linebreak = { workspace = true }
unicode-bidi = { workspace = true }
swash = { workspace = true }
hashbrown = "0.14"
